# CW-5_Skypro

./: .gitignore  README.md  db_config.py  db_manager.py  main.py  pyproject.toml  queries.sql
