[tool.poetry]
name = "cw-5-skypro"
version = "0.1.0"
description = ""
authors = ["Sergey Malyarov <sergey@malyaroff.com>"]
readme = "README.md"
packages = [{include = "cw_5_skypro"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

